fixed contrast errors in timeline card

--- a/src/components/Pagination/Pagination.module.scss
+++ b/src/components/Pagination/Pagination.module.scss
@@ -9,7 +9,7 @@
 
   button {
     padding: 1rem;
-    // tab-size: 0;
+    tab-size: 0;
 
     &:focus {
       border: 1px solid $primary;
