--- a/src/components/TimelineItem/TimelineItem.module.scss
+++ b/src/components/TimelineItem/TimelineItem.module.scss
@@ -1,87 +1,83 @@
 @import "../../styles/variables";
 
 .TimelineItem {
-   
-    position: relative;
-    display: flex;
-    justify-content: flex-end;
-    padding-right: 30px;
-    width: 50%;
-    margin: 10px 0;
+  position: relative;
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 30px;
+  width: 50%;
+  margin: 10px 0;
 
-    &:nth-child(odd) {
-        align-self: flex-end;
-        justify-content: flex-start;
-        padding-left: 30px;
-        padding-right: 0;
+  &:nth-child(odd) {
+    align-self: flex-end;
+    justify-content: flex-start;
+    padding-left: 30px;
+    padding-right: 0;
 
-        .circle {
-            left: -38px;
-        }
-
-        .link {
-            text-align: left;
-        }
-
-    }
-
-    .content {
-        max-width: 70%;
-        background-color: $white;
-        border: 1px solid $primary;
-        margin-bottom: 3rem;
-        padding:1rem;
-        border-radius: 5px;
-        color: $black;
-        position: relative;
-    }
-    h2 {
-        font-size: 1.5rem;
-        margin-bottom: 2rem;
+    .circle {
+      left: -38px;
     }
 
     .link {
-        color: $primary;
-        font-weight: bold;
-        margin-top: 1rem;      
-        display: block;
-        display: flex;
-        align-items: center;
-        text-align: right;
-
-
-        &:hover,
-        &:focus {
-            text-decoration: underline;
-            cursor: pointer;
-        }
-
-        span {
-            margin-left: 0.5rem;
-
-            
-        }
+      text-align: left;
     }
+  }
+
+  .content {
+    max-width: 70%;
+    background-color: $white;
+    border: 1px solid $primary;
+    margin-bottom: 3rem;
+    padding: 1rem;
+    border-radius: 5px;
+    color: $black;
+    position: relative;
+  }
+  h2 {
+    font-size: 1.5rem;
+    margin-bottom: 2rem;
+  }
+
+  .link {
+    color: $black;
+    font-weight: bold;
+    border: 1px solid $black;
+    padding: 0.5rem;
+    text-transform: capitalize;
+    text-align: center;
+    margin-top: 1rem;
+    display: block;
+    display: flex;
+    align-items: center;
+    text-align: right;
+    transition: $transition;
+
+    &:hover,
+    &:focus {
+      background-color: $primary;
+      border: 1px solid $primary;
+      cursor: pointer;
+    }
+
+    span {
+      margin-left: 0.5rem;
+    }
+  }
 }
 
-    .date {
+.date {
+  text-align: center;
+  margin-bottom: 1rem;
+}
 
-        text-align: center;
-        margin-bottom: 1rem;
-
-    }
-
-    .circle {
-        background-color: $white;
-        border: 2px solid $primary;
-        width: 1rem;
-        height: 1rem;
-        border-radius: 50%;
-        position: absolute;
-        top: calc(50% - 0.5rem);
-        right: -40px;
-        z-index: 3;
-
-    }
-
-
+.circle {
+  background-color: $white;
+  border: 2px solid $primary;
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  position: absolute;
+  top: calc(50% - 0.5rem);
+  right: -40px;
+  z-index: 3;
+}
